# agentic_graph_rag_fusion

./: .env.example  .gitignore  AUDIT_FIXES.md  MASTER_PLAN.md  README.md  concepts.md  dashboard.py  pyproject.toml
dataset/: README.md
dataset/implementation/: generate_dataset.py
dataset/results/: document_catalog.csv
dataset/tests/: test_dataset_integrity.py
evaluation/: README.md  build_results_table.py  build_step_readmes.py  judge_llm.py  run_eval.py
evaluation/evaluation/: run_eval.py
evaluation/implementation/: judge.py  report.py
evaluation/tests/: test_metrics.py
llm_gatewayV2/: client.py  gateway_v2.db  main.py  providers.py  run.sh
observability/: README.md  trace_explorer.py
observability/evaluation/: run_traced_eval.py
observability/implementation/: report.py
observability/results/: eval_report.json
observability/tests/: test_tracer.py
pipeline/: eval.py  generate.py  ingest.py  pipeline.py  retrieve.py  tools.py  types_data.py
pipeline/chroma/: chroma.sqlite3
step_00_dataset/: README.md
step_00_dataset/implementation/: generate_dataset.py
step_00_dataset/tests/: test_dataset_integrity.py
step_01_baseline_rag/: README.md
step_01_baseline_rag/evaluation/: golden_questions.py  run_eval.py
step_01_baseline_rag/implementation/: chunker.py  generate.py  ingest.py  pipeline.py  retrieve.py
step_01_baseline_rag/results/: eval_results.json
step_01_baseline_rag/tests/: test_pipeline.py
step_02_chunking/: README.md
step_02_chunking/evaluation/: __init__.py  run_eval.py
step_02_chunking/implementation/: chunker.py  ingestor.py  pipeline.py
step_02_chunking/results/: eval_results.json
step_02_chunking/tests/: test_parsers.py
step_02_observability/: README.md  trace_explorer.py
step_02_observability/evaluation/: run_traced_eval.py
step_02_observability/implementation/: generate_traced.py  phoenix_exporter.py  report.py  traced_pipeline.py  tracer.py
step_02_observability/results/: eval_report.json  traces.jsonl
step_02_observability/tests/: test_tracer.py
step_02_tools/: README.md
step_02_tools/implementation/: csv_tool.py  pipeline.py
step_02_tools/results/: eval_results.json
step_03_evaluation/: README.md
step_03_evaluation/evaluation/: run_eval.py
step_03_evaluation/implementation/: evaluator.py  judge.py  metrics.py  report.py
step_03_evaluation/results/: metric_scores.json
step_03_evaluation/tests/: test_metrics.py
step_03_hybrid_retrieval/: README.md
step_03_hybrid_retrieval/implementation/: bm25_retriever.py  pipeline.py
step_03_hybrid_retrieval/results/: eval_results.json
step_03_tools/: README.md
step_03_tools/evaluation/: run_eval.py
step_03_tools/implementation/: csv_tool.py  pipeline.py
step_03_tools/results/: eval_results.json
step_04_chunking/: README.md  __init__.py
step_04_chunking/evaluation/: run_eval.py
step_04_chunking/implementation/: __init__.py  chunker.py  ingestor.py  pipeline.py  types.py
step_04_chunking/results/: eval_results.json
step_04_chunking/tests/: __init__.py  test_parsers.py
step_04_hybrid_retrieval/: README.md
step_04_hybrid_retrieval/evaluation/: run_eval.py
step_04_hybrid_retrieval/implementation/: bm25_retriever.py  pipeline.py
step_04_hybrid_retrieval/results/: eval_results.json
step_04_knowledge_graph/: README.md
step_04_knowledge_graph/implementation/: aliases.py  graph_query.py  graph_store.py  pipeline.py  query.py
step_04_knowledge_graph/results/: eval_results.json
step_05_knowledge_graph/: README.md
step_05_knowledge_graph/evaluation/: run_eval.py
step_05_knowledge_graph/implementation/: builder.py  graph_store.py  pipeline.py  query.py
step_05_knowledge_graph/results/: eval_results.json  graph.json
step_05_multi_agent/: README.md
step_05_multi_agent/implementation/: orchestrator.py  pipeline.py
step_05_multi_agent/results/: eval_results.json
step_05_tools/evaluation/: run_eval.py
step_05_tools/implementation/: csv_tool.py  pipeline.py
step_05_tools/results/: eval_results.json
step_06_context_engineering/: README.md
step_06_context_engineering/implementation/: context_engineer.py  pipeline.py  router.py
step_06_context_engineering/results/: eval_results.json
step_06_graph_rag/: README.md
step_06_graph_rag/evaluation/: run_eval.py
step_06_graph_rag/implementation/: graph_query.py  pipeline.py
step_06_graph_rag/results/: eval_results.json
step_06_hybrid_retrieval/: README.md
step_06_hybrid_retrieval/evaluation/: run_eval.py
step_06_hybrid_retrieval/implementation/: pipeline.py
step_06_hybrid_retrieval/results/: eval_results.json
step_07_knowledge_graph/: README.md
step_07_knowledge_graph/evaluation/: run_eval.py
step_07_knowledge_graph/implementation/: graph_store.py  pipeline.py
step_07_knowledge_graph/results/: eval_results.json
step_07_multi_agent/: README.md
step_07_multi_agent/evaluation/: run_eval.py
step_07_multi_agent/implementation/: orchestrator.py  pipeline.py
step_07_multi_agent/results/: eval_results.json
step_07_production/: README.md
step_07_production/implementation/: confidence.py  health_monitor.py  pipeline.py  retry.py  semantic_cache.py
step_07_production/results/: eval_results.json
step_07_rag_fusion/: README.md
step_07_rag_fusion/evaluation/: run_eval.py
step_07_rag_fusion/implementation/: bm25_retriever.py  csv_tool.py  pipeline.py
step_07_rag_fusion/results/: eval_results.json
step_07_vsa/: README.md
step_07_vsa/implementation/: pipeline.py  router.py
step_07_vsa/results/: eval_results.json
step_08_agentic_rag/: README.md
step_08_agentic_rag/evaluation/: run_eval.py
step_08_agentic_rag/implementation/: agent.py  pipeline.py  tools.py
step_08_agentic_rag/results/: eval_results.json
step_08_context_engineering/: README.md
step_08_graph_rag/: README.md
step_08_production/: README.md
step_09_multi_agent/: README.md
step_09_vsa/: README.md
step_10_context_engineering/: README.md
step_10_production/: README.md
step_11_vsa/: README.md
step_12_production/: README.md
(+144 files in other folders)
