[project]
name = "agentic-graph-rag-fusion"
version = "0.1.0"
description = "Agentic Graph RAG Fusion — learning project for company-level data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Always needed: LLM clients, utilities
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.7.0",
    "tqdm>=4.66.0",
    "rank-bm25>=0.2.2",
    "langchain>=1.3.1",
    "langchain-text-splitters>=1.1.2",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-google-genai>=3.2.0",
    "ragas>=0.4.3",
    "langchain-openai>=1.1.9",
]

[project.optional-dependencies]
# Per-step extras list only the *incremental* dependency that step needs over
# the prior. Run `uv sync --extra step-04` to pull steps 01-04, etc.
# See AUDIT_FIXES.md #16 for why the older mapping was misaligned.
step-01 = [
    "chromadb>=0.5.0",
    "pandas>=2.2.0",
]
# step-02 inherits everything it needs from step-01 (csv_tool uses pandas).
step-03 = [
    # rank-bm25 lives in base [dependencies] because evaluation imports the
    # retriever directly; this empty extra is kept as a doc-only marker.
]
step-04 = [
    "networkx>=3.3",
]
# step-05 needs nothing new — it composes step-03 + step-04 via the gateway.
step-06 = [
    # CrossEncoder reranker for context engineering.
    "sentence-transformers>=3.0.0",
]
# step-07 needs nothing new — semantic_cache reuses sentence-transformers
# from step-06.
observability = [
    # Phoenix + OTLP for the unnumbered observability/ utility folder.
    "arize-phoenix>=4.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
]
dashboard = [
    # Optional embedder used by the dashboard's experiment lab. Lazy-imported
    # so the dashboard still runs without it (the feature is disabled).
    "fastembed>=0.3.0",
    "plotly>=6.7.0",
    "streamlit>=1.57.0",
]
openai = [
    # Only needed when JUDGE_PROVIDER=openai (paid eval fallback).
    "openai>=1.50.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["dataset/tests", "step_01_baseline_rag/tests", "observability/tests", "evaluation/tests"]
python_files = ["test_*.py"]
markers = ["integration: requires live API keys and built index"]

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_graph_rag_fusion"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# Single "dev" group: installs everything needed for end-to-end work
# (run pipelines + eval + observability + dashboard). Mirrors the
# optional-dependencies extras a developer would otherwise have to pick.
dev = [
    "chromadb>=0.5.0",
    "fastembed>=0.3.0",
    "plotly>=6.7.0",
    "streamlit>=1.57.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.3",
    "pandas>=2.2.0",
    "arize-phoenix>=4.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
]
